tests/fail-postinc_postdec1.art
// check postinc, postdec

int main()
{
	int x = 10;

	x++; // ok
	x--; // ok

	//15++; // error 
	//<10.5,5.5>[0]++; // error
	<10.5,5.5>++; // error
}
